test/users/vass/compilerAssert/compilerAssert6d.good
compilerAssert6d.chpl:3: error: assert failed - aaaaa [...]
