test/users/vass/compilerAssert/compilerAssert6d.chpl

// the current implementation will print "[...]" for 6th+ string
compilerAssert(false, "a", "a", "a", "a", "a", "a");
